[Cronet] Don't claim support of UrlRequests with data URL scheme.

BUG=699163
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2733253002
Cr-Commit-Position: refs/heads/master@{#455175}

Former-commit-id: 0732a920737e6ff8bf2b481ae45cd9970b60e68c